--- a/extension/frontend/XliffEditor/reset.css
+++ b/extension/frontend/XliffEditor/reset.css
@@ -49,11 +49,21 @@ textarea {
 
 table {
     width: 100%;
-     border-collapse: collapse;
+    border-collapse: collapse;
     /* table-layout: fixed; */
 }
-table, th, td {
+
+table, td {
     position: relative;
+}
+
+th {
+    position: sticky;
+    margin-top: 5px;
+    top: 30px;
+    z-index: 99;
+    box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
+    background-color: #4b4b4b;
 }
 th.complete {
     width: 2%;
@@ -74,6 +84,7 @@ div.sticky {
   position: sticky;
   top: 0;
   z-index: 100;
+  background-color: #4b4b4b;
 }
 input[type=checkbox] {
     width: 25px;
