use theme colors

--- a/extension/frontend/XliffEditor/reset.css
+++ b/extension/frontend/XliffEditor/reset.css
@@ -29,8 +29,8 @@ img {
     height: auto;
 }
 
-tr:nth-child(even) td:nth-child(-n+2){background-color: #4b4b4b;} 
-tr:hover {background-color: rgb(95, 97, 100);}
+tr:nth-child(even) td:nth-child(-n+2){background-color:  var(--vscode-editor-inactiveSelectionBackground);} 
+tr:hover {background-color: var(--vscode-editor-selectionBackground);}
 
 .transunit-notes {
     padding-left: 10px;
@@ -63,7 +63,7 @@ th {
     top: 30px;
     z-index: 99;
     box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
-    background-color: #4b4b4b;
+    background-color: var(--vscode-editor-inactiveSelectionBackground);
 }
 th.complete {
     width: 2%;
@@ -84,7 +84,7 @@ div.sticky {
   position: sticky;
   top: 0;
   z-index: 100;
-  background-color: #4b4b4b;
+  background-color:  var(--vscode-editor-inactiveSelectionBackground);
 }
 input[type=checkbox] {
     width: 25px;
