--- a/extension/frontend/PermissionSetNameEditor/reset.css
+++ b/extension/frontend/PermissionSetNameEditor/reset.css
@@ -41,8 +41,7 @@ textarea {
 
 table {
     width: 100%;
-    border-collapse: collapse;
-    /* table-layout: fixed; */
+    border-collapse: separate;
 }
 
 table, td {
@@ -52,7 +51,6 @@ thead {
       text-align: left;
 }
 th {
-    position: sticky;
     margin-top: 5px;
     padding: 6px 4px;
     top: 30px;
@@ -60,23 +58,28 @@ th {
     box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
     background-color: var(--vscode-editor-inactiveSelectionBackground);
 }
-th.xmlpermissionset {
-    width: 25%;
+
+th.roleid {
+    width: 30%;
 }
-th.new-name {
-    width: 25%;
+th.object-name {
+    width: 30%;
 }
-th.new-caption {
-    width: 50%;
+th.object-caption {
+    width: 40%;
 }
 
 table td {
     vertical-align: middle;
 }
+
 div.sticky {
   position: sticky;
   top: 0;
   z-index: 100;
+  width: fit-content;
+  margin-left: auto; 
+  margin-right: 0;
   background-color:  var(--vscode-editor-inactiveSelectionBackground);
 }
 
