--- a/extension/frontend/PermissionSetNameEditor/reset.css
+++ b/extension/frontend/PermissionSetNameEditor/reset.css
@@ -1,12 +1,12 @@
 html {
-    box-sizing: border-box;
-    font-size: 14px;
+  box-sizing: border-box;
+  font-size: 14px;
 }
 
 *,
 *:before,
 *:after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body,
@@ -19,58 +19,66 @@ h6,
 p,
 ol,
 ul {
-    margin: 0;
-    padding: 0;
-    font-weight: normal;
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
-tr:nth-child(even) td:nth-child(-n+2){background-color:  var(--vscode-editor-inactiveSelectionBackground);} 
-tr:hover {background-color: var(--vscode-editor-selectionBackground);}
+tr:nth-child(even) td:nth-child(-n + 2) {
+  background-color: var(--vscode-editor-inactiveSelectionBackground);
+}
+tr:hover {
+  background-color: var(--vscode-editor-selectionBackground);
+}
 
 textarea {
-    width: 100%;
-    top: 0; left: 0; right: 0; bottom: 0;
-    position: absolute; 
-    resize: none;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  resize: none;
 }
 
 table {
-    width: 100%;
-    border-collapse: separate;
+  width: 100%;
+  border-collapse: separate;
 }
 
-table, td {
-    position: relative;
+table,
+td {
+  position: relative;
 }
 thead {
-      text-align: left;
+  text-align: left;
 }
 th {
-    margin-top: 5px;
-    padding: 6px 4px;
-    top: 30px;
-    z-index: 99;
-    box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
-    background-color: var(--vscode-editor-inactiveSelectionBackground);
+  margin-top: 5px;
+  padding: 6px 4px;
+  top: 30px;
+  z-index: 99;
+  box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
+  background-color: var(--vscode-editor-inactiveSelectionBackground);
 }
 
 th.roleid {
-    width: 30%;
+  width: 30%;
 }
 th.object-name {
-    width: 30%;
+  width: 30%;
 }
 th.object-caption {
-    width: 40%;
+  width: 40%;
 }
 
 table td {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 div.sticky {
@@ -78,11 +86,11 @@ div.sticky {
   top: 0;
   z-index: 100;
   width: fit-content;
-  margin-left: auto; 
+  margin-left: auto;
   margin-right: 0;
-  background-color:  var(--vscode-editor-inactiveSelectionBackground);
+  background-color: var(--vscode-editor-inactiveSelectionBackground);
 }
 
 tr {
-    height: 30px;
+  height: 30px;
 }
